--- a/RIFF.Service/packages.config
+++ b/RIFF.Service/packages.config
@@ -2,10 +2,15 @@
 <packages>
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.Net.Compilers" version="3.9.0" targetFramework="net48" developmentDependency="true" />
+  <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="4.7.2" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
 </packages>
