--- a/RIFF.Console/RIFF.Console.csproj
+++ b/RIFF.Console/RIFF.Console.csproj
@@ -332,6 +332,9 @@
     <None Include="RIFFSection.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="settings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.2">
