--- a/RIFF.Service/RIFF.Service.csproj
+++ b/RIFF.Service/RIFF.Service.csproj
@@ -333,17 +333,22 @@
   <ItemGroup>
     <None Include="..\RIFF.Console\log4net.config">
       <Link>log4net.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="..\RIFF.Console\RIFFSection.config">
       <Link>RIFFSection.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="app.config" />
+    <None Include="..\RIFF.Console\settings.config">
+      <Link>settings.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="smtp.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
-    <None Include="RIFF.Service.exe.config">
+    <None Include="app.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
