--- a/RIFF.Console/log4net.config
+++ b/RIFF.Console/log4net.config
@@ -34,7 +34,7 @@
     <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
     <appendToFile value="true" />
     <rollingStyle value="Date" />
-    <datePattern value=".yyyy-MM-dd'.log'" />
+    <datePattern value="_yyyy-MM-dd_[%processid]'.log'" />
     <param name="StaticLogFileName" value="false" />
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date %-5level %appdomain : %message (%thread/%property{NDC})%newline%exception" />
